--- a/angular-ambassador/src/app/main/backend-products/backend-products.component.html
+++ b/angular-ambassador/src/app/main/backend-products/backend-products.component.html
@@ -1,6 +1,32 @@
 <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
+    <div class="col-md-12 mb-4">
+        <div class="alert alert-info" role="alert" *ngIf="link">
+            Link generated: {{link}}
+        </div>
+    </div>
+
+    <div class="col-md-12 mb-4" *ngIf="error">
+        <div class="alert alert-danger" role="alert">
+            You should be logged in to generate a link
+        </div>
+    </div>
+
+    <div class="col-md-12 md-4 input-group">
+        <input type="text" class="form-control" placeholder="Search" (keyup)="search($any($event.target).value)">
+        <div class="input-group-append" *ngIf="selected.length > 0">
+            <button class="btn btn-info" (click)="generate()">Generate Link</button>
+        </div>
+        <div class="input-group-append">
+            <select class="form-select" (change)="sort($any($event.target).value)">
+                <option>Select</option>
+                <option value="asc">Price Ascending</option>
+                <option value="desc">Price Descending</option>
+            </select>
+
+        </div>
+    </div>
     <div class="col" *ngFor="let product of products">
-        <div class="card shadow-sm">
+        <div class="card shadow-sm" (click)="select(product.id)" [class.selected]="isSelected(product.id)">
             <img [src]="product.image" height="200">
 
             <div class="card-body">
@@ -13,6 +39,6 @@
     </div>
 </div>
 
-<div class="d-flex justify-content-center mt-4">
+<div class="d-flex justify-content-center mt-4" *ngIf="showButton">
     <button class="btn btn-primary" (click)="loadMore()">Load More</button>
 </div>
